--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
     <div class="topic-container">
+       
         <div class="main-container bg-primary "></div>
         <div class="inner-container ">
 
@@ -209,7 +210,7 @@
 
 
                             <div class="card">
-                                <img src="z.png" alt="Card 4">
+                              <a href="https://chouaib1123.github.io/Gaming/Gaming"><img src="z.png" alt="Card 4"></a>  
                             </div>
 
                         </div>
@@ -268,6 +269,7 @@
 
 
                 </div>
+                
             </div>
 
 
