--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                     <h4>Bachelor</h4>
                                 </div>
                                 <div class="detail-speech">
-                                    In the year 2023, I achieved my Bachelor in  Computer Science.</div>
+                                    In the year 2023 , I received my Bachelor in Computer Science.</div>
                             </div>
                         </div>
                     </div>
