--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 <div class="detail-title">
                                     <h4>High school</h4>
                                 </div>
-                                <div class="detail-speech">In 2020, I attained my High school diploma in Experimental Science</div>
+                                <div class="detail-speech">In 2020, I attained my High school diploma in Experimental Science.</div>
                             </div>
                         </div>
                         <div class="detail-container-start">
@@ -109,7 +109,7 @@
                                     <h4>Degree</h4>
                                 </div>
                                 <div class="detail-speech">
-                                    In 2022, I achieved a remarkable milestone by obtaining my degree in Computer Science</div>
+                                    In 2022, I achieved a remarkable milestone by obtaining my degree in Computer Science.</div>
                             </div>
                         </div>
                         <div class="detail-container-end">
