--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <ul class="nav">
                         <li><a href="#section1" class="nav-item">ABOUT</a></li>
                         <li><a href="#section2" class="nav-item">SKILLS</a></li>
-                        <li><a href="#section3" class="nav-item">WORKS</a></li>
+                        <li><a href="#section3" class="nav-item">PROJECTS</a></li>
                         <li><a href="#section4" class="nav-item">CONTACT</a></li>
                     </ul>
                     <button class="phone-button" onclick="movebar()">
