--- a/index.html
+++ b/index.html
@@ -131,9 +131,11 @@
                         </svg>
                     </div>
                     <div class="cv-button">
-                        <a href="https://www.dropbox.com/scl/fi/e725pdxw05j75kifhs0c3/CV-de-chouaib.pdf?rlkey=3rtsbi06ny6fminvt7gzot3bg&dl=0"><button class="button">
+                        <a href="https://www.dropbox.com/scl/fi/e725pdxw05j75kifhs0c3/CV-de-chouaib.pdf?rlkey=3rtsbi06ny6fminvt7gzot3bg&dl=0" target="_blank">
+                            <button class="button">
                             <span>Download CV</span>
-                        </button></a>
+                        </button>
+                    </a>
                     </div>
 
                 </div>
@@ -205,25 +207,23 @@
                         <div class="double-card">
 
                             <div class="card">
-                                <a href="https://chouaib1123.github.io/Mansions/Mansions"><img src="project 2 1.png" alt="Card 4"></a>
+                                <a href="https://chouaib1123.github.io/Mansions/Mansions" target="_blank"><img src="project 2 1.png" alt="Card 4"></a>
                             </div>
 
 
                             <div class="card">
-                              <a href="https://chouaib1123.github.io/Gaming/Gaming"><img src="z.png" alt="Card 4"></a>  
+                              <a href="https://chouaib1123.github.io/Gaming/Gaming" target="_blank"><img src="z.png" alt="Card 4"></a>  
                             </div>
 
                         </div>
                         <div class="double-card hidden">
 
                             <div class="card">
-                                <img src="project 3 1.png" alt="Card 4">
+                               <a href="https://chouaib1123.github.io/Pigeon/pigeon" target="_blank"><img src="project 3 1.png" alt="Card 4"></a> 
                             </div>
 
 
-                            <div class="card">
-                                <img src="project 2 1.png" alt="Card 4">
-                            </div>
+                          
 
                         </div>
                     </div>
@@ -263,7 +263,7 @@
                     </div>
                     <div class="gmail">
                         <div class="gmail-icon"><img src="clarity_email-solid.png"></div>
-                        <div class="gmail-link "><a href="https://mail.google.com/mail/?view=cm&fs=1&to=chouaibmonsif123@gmail.com" class="fw-regular ff-primary fs-neutral text-color">chouaibmonsif123@gmail.com</a>
+                        <div class="gmail-link "><a href="https://mail.google.com/mail/?view=cm&fs=1&to=chouaibmonsif123@gmail.com" target="_blank" class="fw-regular ff-primary fs-neutral text-color">chouaibmonsif123@gmail.com</a>
                         </div>
                     </div>
 
