--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
                 <div class="flex-container ">
                     <div class="Heading-div aboutme-details">
                         <div class="Heading-div-title text-color ff-primary fs-secondary-heading fw-bold hidden">
-                            <span>ABOUT ME</span></div>
+                            <span>ABOUT ME</span>
+                        </div>
                         <div class="Heading-div-speech text-color ff-primary fs-text fw-regular  hidden">I am a
                             dedicated student who has proudly achieved a significant milestone by attaining a
                             fundamental computer science license in Morocco. This accomplishment has bestowed upon me a
@@ -304,7 +305,8 @@
                 <div class="flex-container ">
                     <div class="Heading-div myworks-details">
                         <div class="Heading-div-title text-color ff-primary fs-secondary-heading fw-bold hidden">
-                            <span>MY PROJECTS</span></div>
+                            <span>MY PROJECTS</span>
+                        </div>
                         <div class="Heading-div-speech text-color ff-primary fs-text fw-regular  hidden">Upon receiving
                             my license, I launched into self-initiated front-end projects, merging my creative zeal with
                             technical proficiency. This period of self-guided learning enriched my expertise in crafting
@@ -313,21 +315,23 @@
                     </div>
                     <div class="about-me-cards">
                         <div class="double-card">
-
+                            <div class="card hidden">
+                                <a href="ricardo.ma" target="_blank"><img src="ricarddo.png" alt="Card 4"></a>
+                            </div>
                             <div class="card hidden">
                                 <a href="https://chouaib1123.github.io/Mansions/Mansions" target="_blank"><img
                                         src="project 2 1.png" alt="Card 4"></a>
                             </div>
 
 
+
+
+                        </div>
+                        <div class="double-card hide">
                             <div class="card hidden">
                                 <a href="https://chouaib1123.github.io/Gaming/Gaming" target="_blank"><img src="z.png"
                                         alt="Card 4"></a>
                             </div>
-
-                        </div>
-                        <div class="double-card hide">
-
                             <div class="card">
                                 <a href="https://chouaib1123.github.io/Pigeon/pigeon" target="_blank"><img
                                         src="project 3 1.png" alt="Card 4"></a>
