--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                     <div class="about-me-cards">
                         <div class="double-card">
                             <div class="card hidden">
-                                <a href="ricardo.ma" target="_blank"><img src="ricarddo.png" alt="Card 4"></a>
+                                <a href="https://ricardo.ma" target="_blank"><img src="ricarddo.png" alt="Card 4"></a>
                             </div>
                             <div class="card hidden">
                                 <a href="https://chouaib1123.github.io/Mansions/Mansions" target="_blank"><img
